# robotics_project

./: .gitignore  README.md  russian_rulet.py
data/: combinated_deprojected_points.txt  mean1000_depth0.csv  mean1000_depth1.csv
depth_image/: CMakeLists.txt  calibration.cpp  compilator.txt  depth_data.csv  hystogram.py  main.cpp  matrix.cpp  mean10_depth.csv  mean10_depth_csv.csv  patata  patata.cpp  position_camera.txt  resources.cpp  resources.h  retake_photo.cpp  rs-depth.c  rs-depth_capture  rs-depth_image  rs-depth_image.c  rs-test  rs-test.c  rs-test.cpp  test_camera.cpp
depth_image/data/: camera_points_image0.txt  camera_points_image1.txt  check_val.py  mean100_depth0.csv  mean100_depth1.csv  mean10_depth0.csv  mean10_depth1.csv  mean2_depth0.csv  mean2_depth1.csv  mean3_depth0.csv  mean3_depth1.csv  mean500_depth0.csv  reference_points_image0.txt  reference_points_image1.txt
depth_image/data_calibration/: mean_depth_1000cm.csv  mean_depth_100cm.csv  mean_depth_1010cm.csv  mean_depth_110cm.csv  mean_depth_187cm.csv  mean_depth_200cm.csv  mean_depth_210cm.csv  mean_depth_286cm.csv  mean_depth_300cm.csv  mean_depth_310cm.csv  mean_depth_400cm.csv  mean_depth_410cm.csv  mean_depth_500cm.csv  mean_depth_510cm.csv  mean_depth_600cm.csv  mean_depth_610cm.csv  mean_depth_700cm.csv  mean_depth_710cm.csv  mean_depth_800cm.csv  mean_depth_810cm.csv  mean_depth_900cm.csv  mean_depth_910cm.csv  mean_depth_95cm.csv  params_calibration.txt
depth_image/testing/: rs-depth  rs-depth_capture.c  rs-depth_image  rs-depth_image.c  rs-distance  rs-distance.c  test_camera.cpp
matrix/: CMakeLists.txt  matrici.cpp  matrici.hpp  matrici_better.cpp  spatial_t.cpp  spatial_transf.cpp  spatial_transf.hpp  vector.cpp
matrix/data/: reference_points_image0.txt
